# StoryBox-API

./: .gitignore  Cargo.toml  README.md  example.env
migrations/2019-10-20-034223_create_user/: up.sql
src/: main.rs  models.rs  schema.rs  secret.key
src/middleware/: auth.rs
src/services/: auth.rs  mod.rs  project.rs  service_info.html  service_info.rs
src/util/: token.rs
