[package]
name = "storybox-server"
version = "0.1.0"
authors = ["bdyer <bdyer-contractor@cars.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
actix-service = "1.0.5"
dotenv = "0.15.0"
futures = "0.3.1"
hyper = "0.14.5"
jsonwebtoken = "6.0.1"
listenfd = "0.3"
serde = "1.0.104"
serde_derive = "1.0.104"